--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.16.1", features = ["default", "bevy_dev_tools"] }
+bevy_asset_loader = {  version = "0.23.0", features = ["2d"] }
 nalgebra = "0.33.2"
 rand = "0.8.5"
 roots = "0.0.8"
